--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
 .container {
+    background-color: #F5F5F5;
     height: 500px;
     width: 500px;
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
+    /* grid-template-columns: repeat(16, 1fr); */
     border-width: 1px;
     border-style: solid;
-    border-color: black;
+    border-color: #222222;
+    margin: auto;
 }
 
 .cell {
-    border-width: 4px;
-    border-color: black;
+    border-width: 1px;
+    border-color: #222222;
     border-style: solid;
 }
 
