--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container {
     background-color: #F5F5F5;
-    height: 500px;
-    width: 500px;
+    height: 800px;
+    width: 800px;
     display: grid;
     /* grid-template-columns: repeat(16, 1fr); */
     border-width: 1px;
@@ -17,5 +17,5 @@
 }
 
 .black {
-    background-color: black;
+    background-color: #222222;
 }
