Add HTML buttons and temporary active/inactive colors. Target buttons via JS.

--- a/style.css
+++ b/style.css
@@ -19,3 +19,11 @@
 .black {
     background-color: #222222;
 }
+
+.active {
+    background-color: blue;
+}
+
+.inactive {
+    background-color: red;
+}
