--- a/style.css
+++ b/style.css
@@ -57,3 +57,17 @@ button {
 .slidetext {
     text-align: center;
 }
+
+@media screen and (min-width: 650px) and (max-width: 1024px) {
+    .container {
+        height: 600px;
+        width: 600px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .container {
+        height: 375px;
+        width: 375px;
+    }
+}
